@@ -58,6 +58,12 @@ echo bin2hex(mb_convert_case($str, MB_CASE_UPPER_SIMPLE)), "\n";
 echo bin2hex(mb_convert_case($str, MB_CASE_FOLD)), "\n";
 echo bin2hex(mb_convert_case($str, MB_CASE_FOLD_SIMPLE)), "\n";
 
+// Check handling of Greek letter capital sigma
+echo mb_convert_case("ΚΑΛΗΣΠΕΡΑ ΣΑΣ", MB_CASE_TITLE, "UTF-8"), "\n";
+echo mb_convert_case("ΚΑΛΗΣΠΕΡΑ ΣΑΣ", MB_CASE_TITLE_SIMPLE, "UTF-8"), "\n";
+echo mb_convert_case("ΚΑΛΗΣΠΕΡΑ ΣΑΣ", MB_CASE_LOWER, "UTF-8"), "\n";
+echo mb_convert_case("ΚΑΛΗΣΠΕΡΑ ΣΑΣ", MB_CASE_LOWER_SIMPLE, "UTF-8"), "\n";
+
 ?>
 --EXPECT--
 String: ß
@@ -109,3 +115,7 @@ dd
 dd
 69
 69
+Καλησπερα Σασ
+Καλησπερα Σασ
+καλησπερα σας
+καλησπερα σασ
